--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -1609,6 +1609,25 @@ button,
   -webkit-transition: opacity 0.3s ease;
   -o-transition: opacity 0.3s ease;
   transition: opacity 0.3s ease;
+  scrollbar-color: #b4b4d7 #ffffff;
+  scrollbar-width: thin;
+  scroll-padding-right: 4px;
+}
+
+.form-search__select-list::-webkit-scrollbar {
+  width: 12px;
+  background-color: #ffffff;
+}
+
+.form-search__select-list::-webkit-scrollbar-track {
+	background-color: #ffffff;
+}
+
+.form-search__select-list::-webkit-scrollbar-thumb {
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  border-radius: 8px;
+  background-color: #b4b4d7;
 }
 
 .form-search .scroller::-webkit-scrollbar {
@@ -1809,6 +1828,10 @@ button,
   -ms-grid-row-span: 2;
   -ms-grid-column: 3;
   grid-area: content;
+}
+
+.catalog__empty {
+  margin-top: 5%;
 }
 
 .catalog-filter {
